排除idea.md文件上传到仓库，保留本地开发文档

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ yarn-error.log*
 package-lock.json
 yarn.lock
 
+# Project documentation (excluded from repository)
+idea.md
+
 # Environment variables
 .env
 .env.local
